# rustbus

./: Cargo.toml  README.md  settings.json
src/: controller.rs  main.rs
src/gui/: app.rs  mod.rs  protocol.rs  style.rs
src/gui/components/: common.rs  connection.rs  mod.rs  request.rs  table.rs
src/gui/components/connection/: serial.rs  tcp.rs
src/gui/pages/: home_page.rs
